--- a/App/App/App.Android/App.Android.csproj
+++ b/App/App/App.Android/App.Android.csproj
@@ -93,5 +93,8 @@
       <Name>App</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\eye32.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
