--- a/App/App/App.Android/App.Android.csproj
+++ b/App/App/App.Android/App.Android.csproj
@@ -97,7 +97,7 @@
     <AndroidResource Include="Resources\drawable\eye32.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\trash.png" />
+    <AndroidResource Include="Resources\drawable\Bin.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
